Fixed code blocks alignment for highlighted rows

--- a/src/styles/_syntax-highlighting.scss
+++ b/src/styles/_syntax-highlighting.scss
@@ -132,7 +132,7 @@ pre[class*="language-"] {
   margin-right: -1em;
   margin-left: -1em;
   padding-right: 1em;
-  padding-left: 0.75em;
+  padding-left: 1em;
   border-left: 0.25em solid darken(#b3d4fc, 15%);
 }
 
